Update import and finviz function

--- a/Swing Trading 2.ipynb
+++ b/Swing Trading 2.ipynb
@@ -2,35 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "from datetime import datetime as dt, timedelta\n",
+    "import json\n",
+    "import sys\n",
+    "import time\n",
+    "\n",
+    "import concurrent\n",
     "from functools import partial\n",
+    "import multiprocessing.dummy as mp \n",
+    "from multiprocessing import Pool, Manager, cpu_count, Manager , Process\n",
+    "from multiprocessing.pool import ThreadPool\n",
+    "import multiprocessing\n",
+    "\n",
+    "from statistics import median, mean, stdev\n",
+    "import warnings\n",
+    "\n",
     "from bs4 import BeautifulSoup\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "import requests\n",
     "from requests import Session\n",
-    "import sys\n",
-    "import json\n",
-    "from datetime import datetime, timedelta\n",
-    "import matplotlib.pyplot as plt\n",
-    "import time\n",
-    "import ta\n",
-    "import warnings\n",
-    "from statistics import median, mean, stdev\n",
     "import seaborn as sns\n",
+    "import ta\n",
+    "\n",
+    "\n",
     "warnings.filterwarnings('ignore')\n",
     "pd.set_option('display.max_columns', 999)\n",
     "pd.set_option('display.max_rows', 999)\n",
     "#!{sys.executable} -m pip install seaborn\n",
-    "import time\n",
-    "import concurrent\n",
-    "import multiprocessing.dummy as mp \n",
-    "from multiprocessing import Pool, Manager, cpu_count, Manager , Process\n",
-    "from multiprocessing.pool import ThreadPool\n",
-    "import multiprocessing"
+    "\n",
+    "HEADERS = {'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) '\\\n",
+    "                         'AppleWebKit/537.36 (KHTML, like Gecko) '\\\n",
+    "                         'Chrome/75.0.3770.80 Safari/537.36'}"
    ]
   },
   {
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -54,13 +62,11 @@
     "    #url = 'https://finviz.com/screener.ashx?v=131&f=cap_smallover,sh_avgvol_o500,sh_curvol_o1000,ta_rsi_os40'\n",
     "    #url = 'https://finviz.com/screener.ashx?v=131&f=cap_smallover,sh_avgvol_o500,sh_curvol_o500&ft=3&o=-volume'\n",
     "    \n",
-    "    # Headers\n",
+    "    # Create Session\n",
     "    s = Session()\n",
-    "    headers = {'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) '\\\n",
-    "                         'AppleWebKit/537.36 (KHTML, like Gecko) '\\\n",
-    "                         'Chrome/75.0.3770.80 Safari/537.36'}\n",
+    "    \n",
     "    # Add headers\n",
-    "    s.headers.update(headers)\n",
+    "    s.headers.update(HEADERS)\n",
     "    \n",
     "    # Extract data from Finviz - parse html\n",
     "    screener = s.get(url)\n",
@@ -74,8 +80,12 @@
     "    # Empty list to store stocks\n",
     "    my_stocks = []\n",
     "\n",
-    "    # Pages of stocks\n",
-    "    for page in range(1, total_stocks, 20):\n",
+    "    # Pages and number of stocks\n",
+    "    page = 1\n",
+    "    stocks_imported = 0\n",
+    "    \n",
+    "    while stocks_imported < total_stocks:\n",
+    "        \n",
     "        # Create new url\n",
     "        new_url = url + '&r=' + str(page)\n",
     "\n",
@@ -87,9 +97,10 @@
     "        table_element_1 = soup.find_all(class_='table-dark-row-cp')\n",
     "        table_element_2 = soup.find_all(class_='table-light-row-cp')\n",
     "        table_element = table_element_1 + table_element_2\n",
-    "\n",
+    "        \n",
     "        # For each line extract the symbol, name and industry\n",
     "        for idx, row in enumerate(table_element):\n",
+    "            \n",
     "            # Creating table with all 'a' elements\n",
     "            symbol_table = row.find_all('a')\n",
     "            \n",
@@ -102,6 +113,16 @@
     "            \n",
     "            # Append all\n",
     "            my_stocks.append([symbol, symbol_name, symbol_sector])\n",
+    "            \n",
+    "            stocks_imported += 1\n",
+    "            \n",
+    "        if stocks_imported == total_stocks:\n",
+    "            print(f\"Total of {stocks_imported} stocks imported\")\n",
+    "            print('Done loading')\n",
+    "        \n",
+    "        else:\n",
+    "            print(f\"{stocks_imported} stocks imported\")\n",
+    "            page += 20\n",
     "            \n",
     "    return my_stocks"
    ]
@@ -890,9 +911,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 stocks imported\n",
+      "40 stocks imported\n",
+      "60 stocks imported\n",
+      "80 stocks imported\n",
+      "100 stocks imported\n",
+      "120 stocks imported\n",
+      "140 stocks imported\n",
+      "160 stocks imported\n",
+      "180 stocks imported\n",
+      "200 stocks imported\n",
+      "220 stocks imported\n",
+      "240 stocks imported\n",
+      "260 stocks imported\n",
+      "280 stocks imported\n",
+      "300 stocks imported\n",
+      "320 stocks imported\n",
+      "340 stocks imported\n",
+      "360 stocks imported\n",
+      "380 stocks imported\n",
+      "400 stocks imported\n",
+      "420 stocks imported\n",
+      "440 stocks imported\n",
+      "460 stocks imported\n",
+      "480 stocks imported\n",
+      "500 stocks imported\n",
+      "520 stocks imported\n",
+      "540 stocks imported\n",
+      "560 stocks imported\n",
+      "580 stocks imported\n",
+      "600 stocks imported\n",
+      "620 stocks imported\n",
+      "640 stocks imported\n",
+      "660 stocks imported\n",
+      "680 stocks imported\n",
+      "700 stocks imported\n",
+      "720 stocks imported\n",
+      "740 stocks imported\n",
+      "760 stocks imported\n",
+      "780 stocks imported\n",
+      "800 stocks imported\n",
+      "820 stocks imported\n",
+      "840 stocks imported\n",
+      "860 stocks imported\n",
+      "880 stocks imported\n",
+      "900 stocks imported\n",
+      "Total of 907 stocks imported\n",
+      "Done loading\n"
+     ]
+    }
+   ],
    "source": [
     "my_stocks =  finviz_pull('https://finviz.com/screener.ashx?v=111&f=sh_avgvol_o300,ta_perf_52wup&ft=4&o=volume')\n",
     "#my_stocks =  finviz_pull('https://finviz.com/screener.ashx?v=111&f=sh_avgvol_o300&ft=4&o=volume')\n"
