Add code to extract earnings dates

--- a/Swing Trading 2.ipynb
+++ b/Swing Trading 2.ipynb
@@ -42,6 +42,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 569,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip freeze > requirements.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
