--- a/Swing Trading 2.ipynb
+++ b/Swing Trading 2.ipynb
@@ -43,19 +43,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 572,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "appnope==0.1.0\n",
+      "attrs==19.3.0\n",
+      "backcall==0.1.0\n",
+      "beautifulsoup4==4.9.0\n",
+      "bleach==3.1.0\n",
+      "bs4==0.0.0\n",
+      "certifi==2020.4.5.1\n",
+      "chardet==3.0.4\n",
+      "cycler==0.10.0\n",
+      "decorator==4.4.1\n",
+      "defusedxml==0.6.0\n",
+      "entrypoints==0.3\n",
+      "idna==2.9\n",
+      "importlib-metadata==1.5.0\n",
+      "ipykernel==5.1.4\n",
+      "ipython==7.12.0\n",
+      "ipython-genutils==0.2.0\n",
+      "jedi==0.16.0\n",
+      "Jinja2==2.11.1\n",
+      "json5==0.9.1\n",
+      "jsonschema==3.2.0\n",
+      "jupyter-client==5.3.4\n",
+      "jupyter-console==6.1.0\n",
+      "jupyter-core==4.6.3\n",
+      "jupyterlab==1.2.6\n",
+      "jupyterlab-server==1.0.6\n",
+      "jupyterthemes==0.20.0\n",
+      "kiwisolver==1.2.0\n",
+      "lesscpy==0.14.0\n",
+      "MarkupSafe==1.1.1\n",
+      "matplotlib==3.2.1\n",
+      "mistune==0.8.4\n",
+      "more-itertools==8.2.0\n",
+      "nbconvert==5.6.1\n",
+      "nbformat==5.0.4\n",
+      "notebook==6.0.3\n",
+      "numpy==1.18.2\n",
+      "pandas==1.0.3\n",
+      "pandocfilters==1.4.2\n",
+      "parso==0.6.1\n",
+      "pexpect==4.8.0\n",
+      "pickleshare==0.7.5\n",
+      "ply==3.11\n",
+      "prometheus-client==0.7.1\n",
+      "prompt-toolkit==3.0.3\n",
+      "ptyprocess==0.6.0\n",
+      "pyarrow==0.17.0\n",
+      "Pygments==2.5.2\n",
+      "pyparsing==2.4.7\n",
+      "pyrsistent==0.15.7\n",
+      "python-dateutil==2.8.1\n",
+      "pytz==2019.3\n",
+      "pyzmq==18.1.1\n",
+      "requests==2.23.0\n",
+      "scipy==1.4.1\n",
+      "seaborn==0.10.1\n",
+      "Send2Trash==1.5.0\n",
+      "six==1.14.0\n",
+      "soupsieve==2.0\n",
+      "ta==0.5.17\n",
+      "terminado==0.8.3\n",
+      "testpath==0.4.4\n",
+      "tornado==6.0.3\n",
+      "traitlets==4.3.3\n",
+      "urllib3==1.25.8\n",
+      "wcwidth==0.1.8\n",
+      "webencodings==0.5.1\n",
+      "zipp==3.0.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "pip freeze > requirements.txt"
+    "!pip install [package_name] --upgrade"
    ]
   },
   {
