--- a/notebooks/Swing Trading 2.ipynb
+++ b/notebooks/Swing Trading 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,91 +42,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 572,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "appnope==0.1.0\n",
-      "attrs==19.3.0\n",
-      "backcall==0.1.0\n",
-      "beautifulsoup4==4.9.0\n",
-      "bleach==3.1.0\n",
-      "bs4==0.0.0\n",
-      "certifi==2020.4.5.1\n",
-      "chardet==3.0.4\n",
-      "cycler==0.10.0\n",
-      "decorator==4.4.1\n",
-      "defusedxml==0.6.0\n",
-      "entrypoints==0.3\n",
-      "idna==2.9\n",
-      "importlib-metadata==1.5.0\n",
-      "ipykernel==5.1.4\n",
-      "ipython==7.12.0\n",
-      "ipython-genutils==0.2.0\n",
-      "jedi==0.16.0\n",
-      "Jinja2==2.11.1\n",
-      "json5==0.9.1\n",
-      "jsonschema==3.2.0\n",
-      "jupyter-client==5.3.4\n",
-      "jupyter-console==6.1.0\n",
-      "jupyter-core==4.6.3\n",
-      "jupyterlab==1.2.6\n",
-      "jupyterlab-server==1.0.6\n",
-      "jupyterthemes==0.20.0\n",
-      "kiwisolver==1.2.0\n",
-      "lesscpy==0.14.0\n",
-      "MarkupSafe==1.1.1\n",
-      "matplotlib==3.2.1\n",
-      "mistune==0.8.4\n",
-      "more-itertools==8.2.0\n",
-      "nbconvert==5.6.1\n",
-      "nbformat==5.0.4\n",
-      "notebook==6.0.3\n",
-      "numpy==1.18.2\n",
-      "pandas==1.0.3\n",
-      "pandocfilters==1.4.2\n",
-      "parso==0.6.1\n",
-      "pexpect==4.8.0\n",
-      "pickleshare==0.7.5\n",
-      "ply==3.11\n",
-      "prometheus-client==0.7.1\n",
-      "prompt-toolkit==3.0.3\n",
-      "ptyprocess==0.6.0\n",
-      "pyarrow==0.17.0\n",
-      "Pygments==2.5.2\n",
-      "pyparsing==2.4.7\n",
-      "pyrsistent==0.15.7\n",
-      "python-dateutil==2.8.1\n",
-      "pytz==2019.3\n",
-      "pyzmq==18.1.1\n",
-      "requests==2.23.0\n",
-      "scipy==1.4.1\n",
-      "seaborn==0.10.1\n",
-      "Send2Trash==1.5.0\n",
-      "six==1.14.0\n",
-      "soupsieve==2.0\n",
-      "ta==0.5.17\n",
-      "terminado==0.8.3\n",
-      "testpath==0.4.4\n",
-      "tornado==6.0.3\n",
-      "traitlets==4.3.3\n",
-      "urllib3==1.25.8\n",
-      "wcwidth==0.1.8\n",
-      "webencodings==0.5.1\n",
-      "zipp==3.0.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install [package_name] --upgrade"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -135,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -221,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -920,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -988,7 +903,7 @@
       "180 stocks imported\n",
       "200 stocks imported\n",
       "220 stocks imported\n",
-      "Total of 224 stocks imported\n",
+      "Total of 223 stocks imported\n",
       "Done loading\n"
      ]
     }
@@ -1001,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -1029,11 +944,11 @@
      "output_type": "stream",
      "text": [
       "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
+      "Running Yahoo Finance Query: 1 of 23 - 4.35%Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
+      "Running Yahoo Finance Query: 1 of 40 - 2.5%Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
+      "\n",
+      "\n",
       "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
-      "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
-      "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
-      "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
-      "Running Yahoo Finance Query: 1 of 24 - 4.17%\n",
       "Done\n",
       "Done\n",
       "Done\n",
@@ -1066,20 +981,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.concat(L)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 556,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run_indicators_2(df, lst, 'AAPL')"
    ]
   },
   {
@@ -1091,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1101,10 +1007,10 @@
      "output_type": "stream",
      "text": [
       "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
-      "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
-      "Running Yahoo Finance Query: 1 of 24 - 4.17%\n",
-      "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
-      "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
+      "Running Yahoo Finance Query: 1 of 40 - 2.5%Running Yahoo Finance Query: 1 of 23 - 4.35%\n",
+      "\n",
+      "Running Yahoo Finance Query: 1 of 40 - 2.5%Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
+      "\n",
       "Running Yahoo Finance Query: 1 of 40 - 2.5%\n",
       "Done\n",
       "Done\n",
@@ -1135,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 550,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1187,10 +1093,10 @@
      "text": [
       "Start Running IndicatorsStart Running IndicatorsStart Running Indicators\n",
       "Start Running Indicators\n",
-      "Start Running Indicators\n",
-      "Start Running Indicators\n",
+      "Start Running IndicatorsStart Running Indicators\n",
       "\n",
       "\n",
+      "\n",
       "Start Running Indicators\n",
       "5.0% Complete\n",
       "5.0% Complete\n",
@@ -1209,18 +1115,18 @@
       "Start Running Indicators\n",
       "Done\n",
       "Start Running Indicators\n",
+      "Done\n",
+      "5.0% Complete\n",
       "5.0% Complete\n",
       "5.0% Complete\n",
       "Done\n",
       "5.0% Complete\n",
-      "Done\n",
-      "5.0% Complete\n",
-      "25.0% Complete\n",
+      "33.33% Complete\n",
       "Done\n",
       "Done\n",
       "Done\n",
-      "DoneDone\n",
-      "\n"
+      "Done\n",
+      "Done\n"
      ]
     }
    ],
@@ -1247,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,16 +1173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2020-05-10 19:30:00')"
+       "Timestamp('2020-05-12 20:00:02')"
       ]
      },
-     "execution_count": 560,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,11 +1194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 561,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_data.reset_index().to_feather('/Users/renovieira/Desktop/trades.feather')"
+    "# Keep only Columns that we need\n",
+    "signals = []\n",
+    "\n",
+    "for n in [1,2,3,4,5]:\n",
+    "    signals.append(f'buy_signal?{n}')\n",
+    "    signals.append(f'sell_signal?{n}')\n",
+    "\n",
+    "columns_to_keep = ['symbol', 'just_date', 'close_price_x']\n",
+    "columns_to_keep += signals\n",
+    "\n",
+    "clean_data[columns_to_keep].reset_index().to_feather('../output/trades.feather')"
    ]
   },
   {
