Create logic to add pe ratio next to prices

--- a/notebooks/Ledger.ipynb
+++ b/notebooks/Ledger.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# Read generated buys\n",
-    "trades = pd.read_feather('../output/trades.feather')\n",
+    "trades = pd.read_csv('../output/trades.csv')\n",
     "trades['just_date'] = pd.to_datetime(trades['just_date'])\n",
     "business_days = [pd.Timestamp(date.astype(datetime)) for date in list(trades['just_date'].unique())]"
    ]
