Add earnings date and pe_ratio

--- a/notebooks/Extract Earnings Dates.ipynb
+++ b/notebooks/Extract Earnings Dates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,11 @@
     "import requests\n",
     "from requests import Session\n",
     "from datetime import datetime, timedelta\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "headers = {'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) '\\\n",
+    "                     'AppleWebKit/537.36 (KHTML, like Gecko) '\\\n",
+    "                     'Chrome/75.0.3770.80 Safari/537.36'}"
    ]
   },
   {
@@ -2031,9 +2035,7 @@
    "source": [
     "# Define Session and Headers\n",
     "s = Session()\n",
-    "headers = {'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) '\\\n",
-    "                     'AppleWebKit/537.36 (KHTML, like Gecko) '\\\n",
-    "                     'Chrome/75.0.3770.80 Safari/537.36'}\n",
+    "\n",
     "# Add headers\n",
     "s.headers.update(headers)\n",
     "\n",
@@ -2079,10 +2081,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "earnings_df = pd.read_csv('../docs/earnings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "earnings_df['earnings_date'] = pd.to_datetime(earnings_df['earnings_date'])\n",
+    "difference = earnings_df['earnings_date'].max() - datetime.today()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "difference.days"
+   ]
   }
  ],
  "metadata": {
