--- a/notebooks/Swing Trading 2.ipynb
+++ b/notebooks/Swing Trading 2.ipynb
@@ -2,9 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://TAPyPI:****@pkgs.dev.azure.com/tripactions/_packaging/TAPyPI/pypi/simple/\n",
+      "Collecting hurst\n",
+      "  Downloading https://pkgs.dev.azure.com/tripactions/_packaging/57a26788-c526-478b-b438-89dd44010704/pypi/download/hurst/0.0.5/hurst-0.0.5-py3-none-any.whl (5.9 kB)\n",
+      "Requirement already satisfied: pandas>=0.18 in /usr/local/Cellar/jupyterlab/1.2.6/libexec/lib/python3.7/site-packages (from hurst) (1.0.3)\n",
+      "Requirement already satisfied: numpy>=1.10 in /usr/local/Cellar/jupyterlab/1.2.6/libexec/lib/python3.7/site-packages (from hurst) (1.18.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/Cellar/jupyterlab/1.2.6/libexec/lib/python3.7/site-packages (from pandas>=0.18->hurst) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /usr/local/Cellar/jupyterlab/1.2.6/libexec/lib/python3.7/site-packages (from pandas>=0.18->hurst) (2019.3)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/Cellar/jupyterlab/1.2.6/libexec/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas>=0.18->hurst) (1.14.0)\n",
+      "Installing collected packages: hurst\n",
+      "Successfully installed hurst-0.0.5\n",
+      "\u001b[33mWARNING: You are using pip version 20.0.2; however, version 20.1.1 is available.\n",
+      "You should consider upgrading via the '/usr/local/Cellar/jupyterlab/1.2.6/libexec/bin/python3.7 -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime as dt, timedelta\n",
     "import json\n",
@@ -35,7 +54,7 @@
     "warnings.filterwarnings('ignore')\n",
     "pd.set_option('display.max_columns', 999)\n",
     "pd.set_option('display.max_rows', 999)\n",
-    "#!{sys.executable} -m pip install --upgrade bleach\n",
+    "!{sys.executable} -m pip install hurst\n",
     "\n",
     "HEADERS = {'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) '\\\n",
     "                         'AppleWebKit/537.36 (KHTML, like Gecko) '\\\n",
